# capstone1_ROS_gazebo

./: README.md  debug.config
src/ball_detection/: CMakeLists.txt
src/ball_detection/include/ball_detection/: ball_detect.h
src/ball_detection/src/: ball_detect.cpp  ball_detect_compute.cpp  ball_detect_show.cpp  line_detect.cpp
src/core_msgs/: CMakeLists.txt
src/core_msgs/msg/: ball_ch.msg  ball_position.msg  line_info.msg
src/data_integrate/: CMakeLists.txt  debug.config  debug.launch
src/data_integrate/include/: fixed_distance_driver.h  line_cluster.h  linear_move_driver.h  simple_wheel_controller.h  stationary_align_driver.h
src/data_integrate/include/data_integrate/: blackboard.h  direct_wheel_controller.h  fixed_distance_driver.h  robot_drawing.h  simple_wheel_controller.h  square_driver.h  stationary_align_driver.h  task_executor.h
src/data_integrate/include/data_integrate/features/: ball.h  column.h  feature.h  feature_manager.h  past_ball.h  past_feature.h  past_feature_manager.h  rel_point.h  virtual_point.h  visible_feature_manager.h
src/data_integrate/include/data_integrate/tasks/: approach_blue_ball.h  avoid_obstacles_to_ball.h  ball_harvester.h  blue_ball_capture_task.h  blue_ball_return_task.h  blue_ball_search_task.h  finish_capture_blue_ball.h  goal_post_search_task.h  kick_ball_into_goal.h  line_tracer.h  master_task.h  move_ball_to_goal_area.h  move_distance.h  periodic_search_move_once.h  periodic_search_move_repeat.h  sequence_task.h  task.h  turn_angle.h  turn_to_nearest_ball.h  turn_to_nearest_blue_ball.h
src/data_integrate/include/features/: rel_point.h
src/data_integrate/src/: ball_harvesting_new.cpp  blackboard.cpp  data_integration.cpp  data_show.cpp  direct_wheel_controller.cpp  fixed_distance_driver.cpp  linear_move_driver.cpp  model_test_node.cpp  path_planning.cpp  robot_drawing.cpp  simple_wheel_controller.cpp  square_driver.cpp  stationary_align_driver.cpp  task_executor.cpp  test_fixed_distance_driver_node.cpp  test_image_node.cpp  test_simple_wheel_controller_node.cpp  test_stationary_align_driver_node.cpp  test_visible_feature_manager_node.cpp
src/data_integrate/src/features/: ball.cpp  feature.cpp  feature_manager.cpp  past_ball.cpp  past_feature_manager.cpp  rel_point.cpp  visible_feature_manager.cpp
src/data_integrate/src/tasks/: approach_blue_ball.cpp  avoid_obstacles_to_ball.cpp  ball_harvester.cpp  blue_ball_capture_task.cpp  blue_ball_return_task.cpp  blue_ball_search_task.cpp  finish_capture_blue_ball.cpp  goal_post_search_task.cpp  kick_ball_into_goal.cpp  line_tracer.cpp  master_task.cpp  move_ball_to_goal_area.cpp  move_distance.cpp  periodic_search_move_once.cpp  periodic_search_move_repeat.cpp  sequence_task.cpp  task.cpp  turn_angle.cpp  turn_to_nearest_ball.cpp  turn_to_nearest_blue_ball.cpp
src/lidar_avoid1/: CMakeLists.txt  package.xml
src/lidar_avoid1/src/: lidar_avoid1.cpp  lidar_avoid2.cpp
src/p31/launch/: myrobot-ball-start.launch  myrobot.launch  myrobot2.launch
src/p31/textures/: material.xacro
src/p31/urdf/: p31.urdf  sensor.gazebo.xacro
src/p31_control/config/: control.yaml
src/p31_control/launch/: control.launch
src/rviz_test/: CMakeLists.txt  package.xml  rviz-laserscan-howto.md
src/rviz_test/src/: rviz_test_node.cpp
